@@ -133,6 +133,8 @@ ErrorHandlerConfigurationKey=Error handler configuration
 DefaultErrorHandlerConfigurationKey=Default error handler configuration
 DefaultErrorEmailConfigurationKey=Default error email configuration
 ErrorEmailConfigurationKey=Error email configuration
+DefaultLimitEmailConfigurationKey=Default limit email configuration
+LimitEmailConfigurationKey=Limit email configuration
 ConfigureErrorHandlerKey = Configure error handler?
 PROPAGATEKey=Propagate
 IGNOREKey=Ignore
