@@ -125,6 +125,8 @@
 #Missing translation -> DefaultErrorHandlerConfigurationKey=Default error handler configuration
 #Missing translation -> DefaultErrorEmailConfigurationKey=Default error email configuration
 #Missing translation -> ErrorEmailConfigurationKey=Error email configuration
+#Missing translation -> DefaultLimitEmailConfigurationKey=Default limit email configuration
+#Missing translation -> LimitEmailConfigurationKey=Limit email configuration
 #Missing translation -> ConfigureErrorHandlerKey = Configure error handler?
 #Missing translation -> PROPAGATEKey=Propagate
 #Missing translation -> IGNOREKey=Ignore
