@@ -126,6 +126,8 @@ ErrorHandlerConfigurationKey=Konfiguracija za obradu gre\u0161aka
 DefaultErrorHandlerConfigurationKey=Podrazumevana konfiguracija za obradu gre\u0161aka
 DefaultErrorEmailConfigurationKey=Podrazumevana konfiguracija za e-poruku gre\u0161aka
 ErrorEmailConfigurationKey=Konfiguracija za e-poruku gre\u0161aka
+DefaultLimitEmailConfigurationKey=Podrazumevana konfiguracija za e-poruku limita
+LimitEmailConfigurationKey=Konfiguracija za e-poruku limita
 ConfigureErrorHandlerKey = Konfiguri\u0161i obradu gre\u0161aka?
 PROPAGATEKey=Propagiraj
 IGNOREKey=Ignori\u0161i
