@@ -128,7 +128,23 @@ public class SharkConstants {
    public static final String EA_SMTP_ERROR_HANDLER_RETURN_CODE = "SMTP_ERROR_HANDLER_RETURN_CODE";
 
    public static final String EA_SMTP_ERROR_HANDLER_RECIPIENT_PARTICIPANT = "SMTP_ERROR_HANDLER_RECIPIENT_PARTICIPANT";
-   
+
+   public static final String EA_SMTP_LIMIT_HANDLER_EXECUTION_MODE = "SMTP_LIMIT_HANDLER_EXECUTION_MODE";
+
+   public static final String EA_SMTP_LIMIT_HANDLER_GROUP_EMAIL_ONLY = "SMTP_LIMIT_HANDLER_GROUP_EMAIL_ONLY";
+
+   public static final String EA_SMTP_LIMIT_HANDLER_MODE = "SMTP_LIMIT_HANDLER_MODE";
+
+   public static final String EA_SMTP_LIMIT_HANDLER_SUBJECT = "SMTP_LIMIT_HANDLER_SUBJECT";
+
+   public static final String EA_SMTP_LIMIT_HANDLER_CONTENT = "SMTP_LIMIT_HANDLER_CONTENT";
+
+   public static final String EA_SMTP_LIMIT_HANDLER_ATTACHMENTS = "SMTP_LIMIT_HANDLER_ATTACHMENTS";
+
+   public static final String EA_SMTP_LIMIT_HANDLER_ATTACHMENT_NAMES = "SMTP_LIMIT_HANDLER_ATTACHMENT_NAMES";
+
+   public static final String EA_SMTP_LIMIT_HANDLER_DM_ATTACHMENTS = "SMTP_LIMIT_HANDLER_DM_ATTACHMENTS";
+
    public static final String EA_IS_MANDATORY = "IS_MANDATORY";
 
    public static final String EA_MIN_LENGTH = "MIN_LENGTH";
